--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ defaults:
 
 # Site Author
 author: Katrin
-  name: Katrin
+  name: ktrns
   picture:
   email: katrin.yoga.classes@gmail.com
   twitter:
