--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ defaults:
 
 # Site Author
 author: Katrin
-  name: ktrns
+  name: "ktrns"
   email: "katrin.yoga.classes@gmail.com"
   # picture:
   # twitter:
