--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@
 #   url: /categories/
 # - title: Tags
 #   url: /tags/
-# - title: Recipes
-#   url: /recipes/
+- title: Courses
+  url: /courses/
 # - title: Search
 #   url: /search/
 # - title: External Page
