--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,7 @@ collections:
   courses:
     output: true
     permalink: /:collection/:path/
+    sort_by: order
 
 # Front Matter Defaults
 defaults:
